you have been served style

--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
     <script type="text/javascript" src="mds.js"></script>
     <script type="text/javascript" src="service.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Address Book</title>
+    <title>HUB.ADMIN</title>
+    <style>
+        /* Styles for the entire body */
+    body {
+            background-color: lightsteelblue; /* Set background color to light blue */
+            display: flex; /* Set the display to flex */
+            flex-direction: column; /* Arrange children elements in a column */
+            align-items: center; /* Center children elements horizontally */
+            padding: 20px; /* Add some space around the content */
+        }
+        /* Styles for the table */
+        table {
+            border-collapse: collapse; /* Collapse the borders into single lines */
+            width: 100%; /* Make the table take up the full width */
+            margin-bottom: 20px; /* Add some space below the table */
+        }
+        th, td {
+            border: 1px solid black; /* Add a border around each cell */
+            padding: 10px; /* Add some space around the cell content */
+            text-align: center; /* Center the text in the cells */
+        }
+        /* Styles for the button */
+        button {
+            padding: 5px 10px; /* Add some space around the button text */
+            cursor: pointer; /* Change the cursor to a hand when hovering over the button */
+        }</style>
+ 
+
 </head>
 <body>
-    <h1>Address Book ADMIN</h1>
+    <h1>HUB CONTROLLER</h1>
     <table id="address-book">
         <thead>
             <tr>
