--- a/index.html
+++ b/index.html
@@ -65,34 +65,6 @@
     </form>
 
     <script type="text/javascript">
-
-        // Define deleteRow as a global function
-        function deleteRow(id) {
-            MDS.sql(`DELETE FROM AddressBook WHERE ID = ${id}`, function(response) {
-                //log the response to the console
-                console.log(response);
-                if (response.status) {
-                    updateTable();
-                }
-            });
-}
-
-function updateTable() {
-                MDS.sql('SELECT * FROM AddressBook', function(response) {
-                    //log the data to the console
-                    console.log(response);
-                    if (response.status) {
-                        const data = response.rows;
-                        let tableHTML = '';
-                        for (let i = 0; i < data.length; i++) {
-                            tableHTML += `<tr><td>${data[i].NAME}<td class="max">${data[i].MAX}</td><td><button onclick="deleteRow(${data[i].ID})">Delete</button></td></tr>`;
-                        }
-                        document.querySelector('#address-book tbody').innerHTML = tableHTML;
-                    }
-                });
-            }
-
-
         // Wait for the HTML document to be fully loaded
         document.addEventListener('DOMContentLoaded', function() {
             let isSubmitting = false;
@@ -110,32 +82,38 @@ function updateTable() {
                 const max = document.getElementById('max').value;
 
                 MDS.sql(`INSERT INTO AddressBook (name, max) VALUES ('${name}', '${max}')`, function(response) {
-                if (response.status) {
-                    console.log("Data inserted successfully");
-                    updateTable();
-                } else {
-                    console.log("Failed to insert data:", response);
-                }
-    isSubmitting = false;
-});
-
+                    if (response.status) {
+                        updateTable();
+                    }
+                    isSubmitting = false;
+                });
             });
 
-            
-           
-            MDS.sql(`CREATE TABLE IF NOT EXISTS AddressBook (
-                    id INTEGER PRIMARY KEY auto_increment,
+            function updateTable() {
+                MDS.sql('SELECT * FROM AddressBook', function(response) {
+                    if (response.status) {
+                        const data = response.rows;
+                        let tableHTML = '';
+                        for (let i = 0; i < data.length; i++) {
+                            tableHTML += `<tr><td>${data[i].NAME}</td><td>${data[i].MAX}</td></tr>`;
+                        }
+                        document.querySelector('#address-book tbody').innerHTML = tableHTML;
+                    }
+                });
+            }
+
+            // Initialize MDS after the HTML document is fully loaded
+            MDS.init(function() {
+                MDS.sql(`CREATE TABLE IF NOT EXISTS AddressBook (
                     name VARCHAR(255),
                     max VARCHAR(666)
                 )`, function(response) {
                     if (response.status) {
-                        console.log("Table created successfully with ID field");
                         updateTable();
-                    } else {
-                        console.log("Failed to create table:", response);
-    }
-}); 
+                    }
+                });
             });
+        });
     </script>
 </body>
 </html>
