unique names function works

--- a/index.html
+++ b/index.html
@@ -81,19 +81,32 @@
                 const name = document.getElementById('name').value;
                 const max = document.getElementById('max').value;
 
+
+                MDS.sql(`SELECT * FROM AddressBook WHERE name = '${name}'`, function(response) {
+                // if-statement to check the result of the SQL query
+                if (response.status && response.rows.length > 0) {
+                    // Name is not unique, do not insert
+                    // New console.error statement to display error message in console
+                    console.error('Name must be unique');
+
+
+                    isSubmitting = false;
+                } else {
+
                 MDS.sql(`INSERT INTO AddressBook (name, max) VALUES ('${name}', '${max}')`, function(response) {
                     if (response.status) {
                         updateTable();
                     }
                     isSubmitting = false;
                 });
-            });
+        }
+    });
+});
 
             function updateTable() {
                 MDS.sql('SELECT * FROM AddressBook', function(response) {
                     if (response.status) {
                         const data = response.rows;
-                        console.log(data);  // <----- log the data
                         let tableHTML = '';
                         for (let i = 0; i < data.length; i++) {
                             tableHTML += `<tr><td>${data[i].NAME}</td><td class="max">${data[i].MAX}</td><td><button id="delete-${data[i].ID}">Delete</button></td></tr>`;}
